--- a/ComicsShop/Views/Comics/List.cshtml
+++ b/ComicsShop/Views/Comics/List.cshtml
@@ -1,16 +1,27 @@
 
-<h1> Все комиксы</h1>
-<h3>@Model.currentCategory</h3>
-<div class="row mt-5 mb-2">
+<h3 class="row mt-2 mb-2 m-lg-2">@Model.currentCategory</h3>
+<div class="row mt-3 mb-2">
 @{
-    foreach (var comic in Model.AllComics){
-        <div class="col-lg-4">
-            <img class="img-thumbnail" src="@comic.img" alt="@comic.name"/>
-            <h2>@comic.name</h2>
-            <p>@comic.shortDesc</p>
-            <p>Price: @comic.price.ToString("c")</p>
-            <p><a class="btn btn-warning" href="#">Подробнее</a></p>
+    <div class="container">
+        <div class="row">
+            @foreach (var comic in Model.AllComics)
+            {
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100 d-flex flex-column">
+                        <img class="card-img-top img-thumbnail" src="@comic.img" alt="@comic.name" style="height: 550px; object-fit: cover;" />
+                        <div class="card-body d-flex flex-column">
+                            <h3 class="card-title">@comic.name</h3>
+                            <p class="card-text">@comic.shortDesc</p>
+                            <p class="card-text">Price: @comic.price.ToString("c")</p>
+                            <div class="mt-auto">
+                                <a class="btn btn-warning" href="#">Buy</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
-    }
+    </div>
+
 }
 </div>
