--- a/ComicsShop/Views/Shared/_Layout.cshtml
+++ b/ComicsShop/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
           <a class="nav-link" href="/Comics/List/all">Main</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Comics/List/dc">DC</a>
+          <a class="nav-link" href="/Comics/List/DC">DC</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Comics/List/marvel">Marvel</a>
+          <a class="nav-link" href="/Comics/List/Marvel">Marvel</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
